--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -1,12 +1,4 @@
-# configuration for COMMAND.py
-# Each device has its own section and specific keys
-# The [Command] section is reserved for global variables in Command
-# Each device section contains "executable" key that tells Command what to run
-#
-# Note: all keys/values are processed as STRINGS
-
 [Command]
-# Command section is mandatory!
 directory = /home/jon/FR
 
 [camera]
@@ -16,6 +8,12 @@ executable = camera.my_dev
 executable = email_notifier.my_dev
 password = EnggPhysCapstone20
 receiver = mcmonagl@ualberta.ca
+message = Message Test From Config
 
 [encoder]
 executable = encoder.my_dev
+
+[value_editor]
+executable = value_editor.my_dev
+receiver = mcmonagl@ualberta.ca
+message = Message Test From Config
