updated, working on encoder and list of saved faces

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -8,7 +8,6 @@ executable = camera.my_dev
 executable = email_notifier.my_dev
 password = EnggPhysCapstone20
 receiver = mcmonagl@ualberta.ca
-message = Message Test From Config
 
 [encoder]
 executable = encoder.my_dev
@@ -16,4 +15,6 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = mcmonagl@ualberta.ca
-message = Message Test From Config
+
+[saved_faces]
+jon = jon
