Major updates for encoder, camera, value editor, everything working well

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,6 +15,8 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = mcmonagl@ualberta.ca
+directory = /home/jon/Desktop/Jon
 
 [saved_faces]
-0 = jon
+0 = Cristiano
+1 = Jon
