First batch of changes to FR system. Feb 26, 2021. From VBox

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,7 +15,10 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = mcmonagl@ualberta.ca
-directory = /home/jon/Desktop/Jon
+directory = /home/jon/Desktop/rattlesnake
+
+[recognition]
+executable = recognition.my_dev
 
 [saved_faces]
 
