--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,10 +15,11 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = mcmonagl@ualberta.ca
-directory = /home/jon/Desktop/rattlesnake
+directory = /media/pi/CRUZER/Jon
 
 [recognition]
 executable = recognition.my_dev
 
 [saved_faces]
+0 = Jon
 
