--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -14,7 +14,7 @@ executable = encoder.my_dev
 
 [value_editor]
 executable = value_editor.my_dev
-receiver = nope
+receiver = mcmonagl@ualberta.ca
 directory = /home/pi/Desktop/Jon
 
 [recognition]
