March 14, 2021: updates to recognition to work for multiple encodings better

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,7 +15,7 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = mcmonagl@ualberta.ca
-directory = /home/pi/Desktop/Jon
+directory = /home/jon/Desktop/ericg
 
 [recognition]
 executable = recognition.my_dev
