March 20, 2021: Person recognized prints to the screen.

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,7 +15,7 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = mcmonagl@ualberta.ca
-directory = /home/jon/Desktop/ericg
+directory = /home/jon/Desktop
 
 [recognition]
 executable = recognition.my_dev
