March 21, 2021: Config now has blank email to start with. Emails will not send if no email set.

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -7,14 +7,14 @@ executable = camera.my_dev
 [email_notifier]
 executable = email_notifier.my_dev
 password = EnggPhysCapstone20
-receiver = mcmonagl@ualberta.ca
+receiver = 
 
 [encoder]
 executable = encoder.my_dev
 
 [value_editor]
 executable = value_editor.my_dev
-receiver = mcmonagl@ualberta.ca
+receiver = 
 directory = /home/jon/Desktop
 
 [recognition]
