March 23, 2021: Updates to everything.. Improving speed and efficiency of program. Also hopefully fixed quitting error.

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,11 +15,9 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = 
-directory = /home/jon/Desktop/jon
+directory = /home/jon/Desktop/
 
 [recognition]
 executable = recognition.my_dev
 
 [saved_faces]
-
-
