March 23, 2021: image size is now 1/2 for everything

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,9 +15,10 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = 
-directory = /home/jon/Desktop/
+directory = /home/jon/Desktop/jon
 
 [recognition]
 executable = recognition.my_dev
 
 [saved_faces]
+
