April 8, 2021: One final update for the blur detection.

--- a/config/config_FR.cfg
+++ b/config/config_FR.cfg
@@ -15,7 +15,7 @@ executable = encoder.my_dev
 [value_editor]
 executable = value_editor.my_dev
 receiver = 
-directory = /home/jon/Desktop/
+directory = /home/Desktop
 
 [recognition]
 executable = recognition.my_dev
